3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

=======
Fix bug #1673713: event_attack in (sword etc) weapon doesn't work.
 server/attack.c: fix EVENT_ATTACK weirdness.
 ---
Implement feature request #1560416: give warning when spell is about to expire.
Player will be warned when left duration is one fifth, then one twenty-fifth.
Two new functions are introduced, check_spell_expiry() and store_spell_expiry().
 include/sproto.h
 server/spell_effect.c spell_util.c time.c
---
Implement feature request #1675158: dmhide - "detect monster" will reveal DM.
 spell_effect.c: detection doesn't concern DMs.
Ryo 2007-03-06

Add Object.Owner (read/write) and Crossfire.GetFriendlyList.
 plugins/cfpython/include/cfpython_object_private.h
 plugins/cfpython/cfpython.c
 plugins/cfpython/cfpython_object.c
---
Add cf_friendlylist_get_first / cf_friendlylist_get_next to browser friendlylist.
Add cf_object_set_object_property.
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
---
Give access to friendlylist to plugins, through cfapi_friendlylist_get_next().
 include/sproto.h
 server/plugins.c
---
common/object.c: let set_owner accept owner NULL (-> clear_owner()).
---
Implement request feature #1669443: dmhide - players can still send 'tell.
server/c_chat.c: DM are now shown as not logger with regard to tell/reply.
---
server/c_object.c: call EVENT_PICKUP which was forgotten somewhere along the way.
server/plugins.c: don't remove/free removed/freed objects, log mistake. This closes
 bug #1670465: server doesn't have check to see if it is removing removed
Ryo 2007-03-04

Add cf_object_set_float_property.
 plugins/common/include/plugin_common.h